src/snapshots/squawk__parse__tests__alter_subscription_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: AlterSubscriptionStmt(
                    Object({
                        "kind": Number(
                            2,
                        ),
                        "publication": Array([
                            Object({
                                "String": Object({
                                    "str": String(
                                        "insert_only",
                                    ),
                                }),
                            }),
                        ]),
                        "subname": String(
                            "mysub",
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    53,
                ),
            },
        ),
        RawStmt(
            RawStmt {
                stmt: AlterSubscriptionStmt(
                    Object({
                        "kind": Number(
                            4,
                        ),
                        "options": Array([
                            Object({
                                "DefElem": Object({
                                    "arg": Object({
                                        "Integer": Object({
                                            "ival": Number(
                                                0,
                                            ),
                                        }),
                                    }),
                                    "defaction": Number(
                                        0,
                                    ),
                                    "defname": String(
                                        "enabled",
                                    ),
                                    "location": Number(
                                        55,
                                    ),
                                }),
                            }),
                        ]),
                        "subname": String(
                            "mysub",
                        ),
                    }),
                ),
                stmt_location: 54,
                stmt_len: Some(
                    33,
                ),
            },
        ),
    ],
)
