src/snapshots/squawk__parse__tests__alter_table_extension.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: AlterExtensionStmt(
                    Object({
                        "extname": String(
                            "hstore",
                        ),
                        "options": Array([
                            Object({
                                "DefElem": Object({
                                    "arg": Object({
                                        "String": Object({
                                            "str": String(
                                                "2.0",
                                            ),
                                        }),
                                    }),
                                    "defaction": Number(
                                        0,
                                    ),
                                    "defname": String(
                                        "new_version",
                                    ),
                                    "location": Number(
                                        30,
                                    ),
                                }),
                            }),
                        ]),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    38,
                ),
            },
        ),
    ],
)
