src/snapshots/squawk__parse__tests__alter_table_space_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: RenameStmt(
                    RenameStmt {
                        newname: "fast_raid",
                        behavior: Restrict,
                        relation: None,
                        relation_type: AccessMethod,
                        rename_type: Tablespace,
                        subname: Some(
                            "index_space",
                        ),
                    },
                ),
                stmt_location: 0,
                stmt_len: Some(
                    48,
                ),
            },
        ),
    ],
)
