src/snapshots/squawk__parse__tests__alter_user_mapping_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: AlterUserMappingStmt(
                    Object({
                        "options": Array([
                            Object({
                                "DefElem": Object({
                                    "arg": Object({
                                        "String": Object({
                                            "str": String(
                                                "public",
                                            ),
                                        }),
                                    }),
                                    "defaction": Number(
                                        1,
                                    ),
                                    "defname": String(
                                        "password",
                                    ),
                                    "location": Number(
                                        51,
                                    ),
                                }),
                            }),
                        ]),
                        "servername": String(
                            "foo",
                        ),
                        "user": Object({
                            "RoleSpec": Object({
                                "location": Number(
                                    23,
                                ),
                                "rolename": String(
                                    "bob",
                                ),
                                "roletype": Number(
                                    0,
                                ),
                            }),
                        }),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    69,
                ),
            },
        ),
    ],
)
