src/snapshots/squawk__parse__tests__comment_on_stmt.snap
---
source: src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: CommentStmt(
                    Object({
                        "comment": String(
                            "Computes sample variance",
                        ),
                        "object": Object({
                            "ObjectWithArgs": Object({
                                "objargs": Array([
                                    Object({
                                        "TypeName": Object({
                                            "location": Number(
                                                36,
                                            ),
                                            "names": Array([
                                                Object({
                                                    "String": Object({
                                                        "str": String(
                                                            "pg_catalog",
                                                        ),
                                                    }),
                                                }),
                                                Object({
                                                    "String": Object({
                                                        "str": String(
                                                            "float8",
                                                        ),
                                                    }),
                                                }),
                                            ]),
                                            "typemod": Number(
                                                -1,
                                            ),
                                        }),
                                    }),
                                ]),
                                "objname": Array([
                                    Object({
                                        "String": Object({
                                            "str": String(
                                                "my_aggregate",
                                            ),
                                        }),
                                    }),
                                ]),
                            }),
                        }),
                        "objtype": Number(
                            1,
                        ),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    83,
                ),
            },
        ),
    ],
)
